--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8" />
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="Web site created using create-snowpack-app" />
-    <title>Snowpack App</title>
+    <meta name="description" content="나에게 꼭 맞는 향수 추천" />
+    <title>Perpick - 나에게 꼭 맞는 향수 추천</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
