--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
     <meta charset="utf-8">
     <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Web site created using create-snowpack-app">
-    <title>Snowpack App</title>
+    <meta name="description" content="&#xB098;&#xC5D0;&#xAC8C; &#xAF2D; &#xB9DE;&#xB294; &#xD5A5;&#xC218; &#xCD94;&#xCC9C;">
+    <title>Perpick - &#xB098;&#xC5D0;&#xAC8C; &#xAF2D; &#xB9DE;&#xB294; &#xD5A5;&#xC218; &#xCD94;&#xCC9C;</title>
   <link rel="stylesheet" href="/dist/index.css"></head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
