--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <!-- <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
     new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
     j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-    })(window,document,'script','dataLayer','GTM-T54Z7FL');</script> -->
+    })(window,document,'script','dataLayer','GTM-T54Z7FL');</script>
     <meta charset="utf-8" />
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -13,9 +13,9 @@
     <title>Perpick - 나에게 꼭 맞는 향수 추천</title>
   </head>
   <body style="background-color:snow;">
-    <!-- <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-T54Z7FL"
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-T54Z7FL"
     height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-    <noscript>You need to enable JavaScript to run this app.</noscript> -->
+    <noscript>You need to enable JavaScript to run this app.</noscript>
     <script type="module" src="/dist/index.js"></script>
     <!--
       This HTML file is a template.
