deploy: e50c72999e51c45d3f0b6120b3abfdff387b89ba

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html><html lang="en"><head>
-    <!-- <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
     new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
     j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-    })(window,document,'script','dataLayer','GTM-T54Z7FL');</script> -->
+    })(window,document,'script','dataLayer','GTM-T54Z7FL');</script>
     <meta charset="utf-8">
     <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -11,9 +11,9 @@
     <title>Perpick - &#xB098;&#xC5D0;&#xAC8C; &#xAF2D; &#xB9DE;&#xB294; &#xD5A5;&#xC218; &#xCD94;&#xCC9C;</title>
   <link rel="stylesheet" href="/dist/index.css"></head>
   <body style="background-color:snow;">
-    <!-- <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-T54Z7FL"
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-T54Z7FL"
     height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-    <noscript>You need to enable JavaScript to run this app.</noscript> -->
+    <noscript>You need to enable JavaScript to run this app.</noscript>
     <script type="module" src="/dist/index.js"></script>
     <!--
       This HTML file is a template.
