--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <meta name="description" content="나에게 꼭 맞는 향수 추천" />
     <title>Perpick - 나에게 꼭 맞는 향수 추천</title>
   </head>
-  <body style="background-color:snow;">
+  <body style="background-color: #FFF8FB;">
     <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-T54Z7FL"
     height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <noscript>You need to enable JavaScript to run this app.</noscript>
