--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="description" content="&#xB098;&#xC5D0;&#xAC8C; &#xAF2D; &#xB9DE;&#xB294; &#xD5A5;&#xC218; &#xCD94;&#xCC9C;">
     <title>Perpick - &#xB098;&#xC5D0;&#xAC8C; &#xAF2D; &#xB9DE;&#xB294; &#xD5A5;&#xC218; &#xCD94;&#xCC9C;</title>
   <link rel="stylesheet" href="/dist/index.css"></head>
-  <body style="background-color:snow;">
+  <body style="background-color: #FFF8FB;">
     <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-T54Z7FL"
     height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <noscript>You need to enable JavaScript to run this app.</noscript>
