--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     })(window,document,'script','dataLayer','GTM-T54Z7FL');</script>
     <meta charset="utf-8" />
     <link rel="icon" href="/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <meta name="description" content="나에게 꼭 맞는 향수 추천" />
     <title>Perpick - 나에게 꼭 맞는 향수 추천</title>
   </head>
