--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     })(window,document,'script','dataLayer','GTM-T54Z7FL');</script>
     <meta charset="utf-8">
     <link rel="icon" href="/favicon.ico">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <meta name="description" content="&#xB098;&#xC5D0;&#xAC8C; &#xAF2D; &#xB9DE;&#xB294; &#xD5A5;&#xC218; &#xCD94;&#xCC9C;">
     <title>Perpick - &#xB098;&#xC5D0;&#xAC8C; &#xAF2D; &#xB9DE;&#xB294; &#xD5A5;&#xC218; &#xCD94;&#xCC9C;</title>
   <link rel="stylesheet" href="/dist/index.css"></head>
