feat: add default meta tag

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,12 @@
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <meta name="description" content="나에게 꼭 맞는 향수 추천" />
-    <title>Perpick - 나에게 꼭 맞는 향수 추천</title>
+    <meta property="og:url" content="https://perpick.github.io/">
+    <meta property="og:title" content="퍼픽">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="https://perpick.github.io/banner.png">
+    <meta property="og:description" content="나에게 꼭 맞는 향수 추천">
+    <title>퍼픽 - 나에게 꼭 맞는 향수 추천</title>
   </head>
   <body style="background-color: #FFFBFC;">
     <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-T54Z7FL"
