--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
     <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <meta name="description" content="&#xB098;&#xC5D0;&#xAC8C; &#xAF2D; &#xB9DE;&#xB294; &#xD5A5;&#xC218; &#xCD94;&#xCC9C;">
-    <title>Perpick - &#xB098;&#xC5D0;&#xAC8C; &#xAF2D; &#xB9DE;&#xB294; &#xD5A5;&#xC218; &#xCD94;&#xCC9C;</title>
+    <meta property="og:url" content="https://perpick.github.io/">
+    <meta property="og:title" content="&#xD37C;&#xD53D;">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="https://perpick.github.io/banner.png">
+    <meta property="og:description" content="&#xB098;&#xC5D0;&#xAC8C; &#xAF2D; &#xB9DE;&#xB294; &#xD5A5;&#xC218; &#xCD94;&#xCC9C;">
+    <title>&#xD37C;&#xD53D; - &#xB098;&#xC5D0;&#xAC8C; &#xAF2D; &#xB9DE;&#xB294; &#xD5A5;&#xC218; &#xCD94;&#xCC9C;</title>
   <link rel="stylesheet" href="/dist/index.css"></head>
   <body style="background-color: #FFFBFC;">
     <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-T54Z7FL"
