--- a/public/index.html
+++ b/public/index.html
@@ -16,12 +16,20 @@
     <meta property="og:image" content="https://perpick.github.io/banner.png">
     <meta property="og:description" content="나에게 꼭 맞는 향수 추천">
     <title>퍼픽 - 나에게 꼭 맞는 향수 추천</title>
+    <script src="https://developers.kakao.com/sdk/js/kakao.min.js"></script>
+    <script>(function(d, s, id) {
+    var js, fjs = d.getElementsByTagName(s)[0];
+    if (d.getElementById(id)) return;
+    js = d.createElement(s); js.id = id;
+    js.src = "https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v3.0";
+    fjs.parentNode.insertBefore(js, fjs);
+    }(document, 'script', 'facebook-jssdk'));</script>
   </head>
   <body style="background-color: #FFFBFC;">
     <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-T54Z7FL"
     height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
     <script type="module" src="/dist/index.js"></script>
+    
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
