--- a/index.html
+++ b/index.html
@@ -14,12 +14,20 @@
     <meta property="og:image" content="https://perpick.github.io/banner.png">
     <meta property="og:description" content="&#xB098;&#xC5D0;&#xAC8C; &#xAF2D; &#xB9DE;&#xB294; &#xD5A5;&#xC218; &#xCD94;&#xCC9C;">
     <title>&#xD37C;&#xD53D; - &#xB098;&#xC5D0;&#xAC8C; &#xAF2D; &#xB9DE;&#xB294; &#xD5A5;&#xC218; &#xCD94;&#xCC9C;</title>
+    <script src="https://developers.kakao.com/sdk/js/kakao.min.js"></script>
+    <script>(function(d, s, id) {
+    var js, fjs = d.getElementsByTagName(s)[0];
+    if (d.getElementById(id)) return;
+    js = d.createElement(s); js.id = id;
+    js.src = "https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v3.0";
+    fjs.parentNode.insertBefore(js, fjs);
+    }(document, 'script', 'facebook-jssdk'));</script>
   <link rel="stylesheet" href="/dist/index.css"></head>
   <body style="background-color: #FFFBFC;">
     <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-T54Z7FL"
     height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
     <script type="module" src="/dist/index.js"></script>
+    
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
